--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseURL               = "https://bioit.top"
+baseURL               = "https://nav.weidows.tech"
 languageCode          = "zh-CN"
-title                 = "WebStack-Hugo 网址导航"
+title                 = "网址导航 | Site navigator"
 theme                 = "WebStack-Hugo"
 preserveTaxonomyNames = true
 disablePathToLower    = true
@@ -8,40 +8,40 @@ hasCJKLanguage        = true
 publishDir            = "public"
 
 [params]
-    author        = "shenweiyan"
-    description   = "WebStack-Hugo 网址导航主题 | Bio IT 爱好者"
-    upload        = "https://www.yuque.com/forms/share/1a1fee15-f7a9-4ee6-9dd4-b0ba9fef1871"
-    about         = "https://weiyan.cc/discussions-10/"	                # 左侧导航栏的"关于我们"页面(./about)
-    repository    = "https://github.com/shenweiyan/WebStack-Hugo"	
+    author        = "Weidows"
+    description   = "网址导航 | Weidows"
+    upload        = "https://github.com/Weidows/WebStack-Hugo/issues"
+    about         = "https://github.com/Weidows"	                # 左侧导航栏的"关于我们"页面(./about)
+    repository    = "https://github.com/Weidows/WebStack-Hugo"
     enablePreLoad = true                                                # 网站完全打开前预加载动画
-    textPreLoad   = "BioIT 爱好者"                                      # 预加载的动画文字, 只有当enablePreLoad=true时生效
-    expandSidebar = false                                               # 默认展开左侧边导航栏
-    logosPath     = "https://res.bioit.top/logos"	        	# 网站每个导航地址logo存放地址
-    defaultLogo   = "https://res.bioit.top/logos/default.webp"  	# logo图片资源不存在或者错误时, 默认显示的logo; 该参数如为空,将会一直加载对应的logo,直至成功
-    nightMode     = false						# 默认站点为深色(夜间)模式
+    textPreLoad   = "Welcome"                                      # 预加载的动画文字, 只有当enablePreLoad=true时生效
+    expandSidebar = true                                               # 默认展开左侧边导航栏
+    logosPath     = "https://pan.weidows.tech/d/local/img/avatar/6e7c5e92.jpg"	        	# 网站每个导航地址logo存放地址
+    defaultLogo   = "https://pan.weidows.tech/d/local/img/404.jpg"  	# logo图片资源不存在或者错误时, 默认显示的logo; 该参数如为空,将会一直加载对应的logo,直至成功
+    nightMode     = true						# 默认站点为深色(夜间)模式
     yiyan         = true                                        	# 默认启用一言服务
 
 [params.seo]
-    baiduhmid       = 'a65c08a1c6ad31ab8162591e3c4b2fc1'             	# 百度统计 hm.src 的 ID
-    baiduSiteVer    = 'codeva-cCAOSG8MBO'                            	# 百度HTML标签验证(baidu-site-verification)    
+    baiduhmid       = ''             	# 百度统计 hm.src 的 ID
+    baiduSiteVer    = 'codeva-6upzchFmkd'                            	# 百度HTML标签验证(baidu-site-verification)
     tj51laid        = ''                                        	# 51.LA 网站统计
     tj51lack        = ''
-    GoogleAdsClient = 'ca-pub-9356811841483300'
+    GoogleAdsClient = ''
 
 [params.qweather]
     key = "085791e805a24491b43b06cf58ab31e7"
 
 [params.images]
-    favicon           = "https://res.bioit.top/sites/favicon.png"
-    searchImageL      = "https://res.bioit.top/banner/bg-dna.jpg"	# 搜索部分浅色背景图
-    searchImageD      = "https://res.bioit.top/banner/bg-dna.jpg"	# 搜索部分深色背景图
-    logoExpandLight   = "https://res.bioit.top/sites/bt8-expand-light.png"
-    logoExpandDark    = "https://res.bioit.top/sites/bt8-expand-dark.png"
-    logoCollapseLight = "https://res.bioit.top/sites/bt.png"
-    logoCollapseDark  = "https://res.bioit.top/sites/bt.png"
+    favicon           = "https://pan.weidows.tech/d/local/img/avatar/6e7c5e92.jpg"
+    searchImageL      = "https://pan.weidows.tech/d/local/album/%E5%BD%A9%E8%89%B2%E5%87%A0%E4%BD%95%E6%A8%A1%E5%9D%97/03.jpg"	# 搜索部分浅色背景图
+    searchImageD      = "https://pan.weidows.tech/d/local/album/%E5%BD%A9%E8%89%B2%E5%87%A0%E4%BD%95%E6%A8%A1%E5%9D%97/02.jpg"	# 搜索部分深色背景图
+    logoExpandLight   = "https://pan.weidows.tech/d/local/album/%E5%BD%A9%E8%89%B2%E5%87%A0%E4%BD%95%E6%A8%A1%E5%9D%97/03.jpg"
+    logoExpandDark    = "https://pan.weidows.tech/d/local/album/%E5%BD%A9%E8%89%B2%E5%87%A0%E4%BD%95%E6%A8%A1%E5%9D%97/02.jpg"
+    logoCollapseLight = ""
+    logoCollapseDark  = ""
 
 [markup.goldmark.renderer]
     unsafe = true
 
 [params.footer]
-    copyright = '本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：<a href="mailto:shen@weiyan.cc?subject=WebStack-Hugo网址导航意见反馈" target="_blank">shen@weiyan.cc</a> <br/>&copy; 2021 - {year} By [WebStack-Hugo](https://github.com/shenweiyan/WebStack-Hugo) | [Bio IT 爱好者](https://www.bioitee.com/) | [粤ICP备16023717号](http://beian.miit.gov.cn/)<br/>Powered by [Netlify](https://app.netlify.com/)'
+    copyright = '<br/>&copy; 2024 - {year} By @Weidows | [WebStack-Hugo](https://github.com/shenweiyan/WebStack-Hugo)'
