--- a/data/headers.yml
+++ b/data/headers.yml
@@ -1,18 +1,14 @@
-- item: 首页
+- item: Blog
   icon: fa fa-home
-  link: "./"
+  link: "https://blog.weidows.tech"
 
-- item: 作者
-  icon: fab fa-hive
-  link: https://weiyan.cc
+# - item: 作者
+#   icon: fab fa-hive
+#   link:
 
-- item: 关于
-  icon: fa fa-cog
-  link: ""
-  list:
-    - name: 教程
-      url: "https://github.com/shenweiyan/Knowledge-Garden/discussions/10"
-    - name: 主题
-      url: "https://github.com/shenweiyan/WebStack-Hugo"
-    - name: 源码
-      url: https://github.com/shenweiyan/Bioit-top
+# - item: 关于
+#   icon: fa fa-cog
+#   link: ""
+#   list:
+#     - name:
+#       url: ""
